[package]
name = "async-file"
version = "0.1.0"
authors = ["Tate, Hongliang Tian <tate.thl@antfin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "1.0"
async-rt = { path = "../async-rt", features = ["auto_run"] }
atomic = "0.5"
futures = { version = "0.3", default-features = false, features = ["alloc"]  }
intrusive-collections = "0.9"
itertools = "0.10"
libc = "0.2"
io_uring_callback = { path = "../io-uring-callback" }

[dev-dependencies]
ctor = "0.1"
lazy_static = "1.4"