[package]
name = "async-file"
version = "0.1.0"
authors = ["Tate, Hongliang Tian <tate.thl@antfin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "1.0"
atomic = "0.5"
futures = { version = "0.3", default-features = false, features = ["alloc"]  }
intrusive-collections = "0.9"
itertools = { version = "0.10", default-features = false, features = ["use_alloc"] }
io_uring_callback = { path = "../io-uring-callback" }

[target.'cfg(not(sgx))'.dependencies]
async-rt = { path = "../async-rt", features = ["auto_run"] }
libc = "0.2"

# features from different targets will be unified.
# hence, async-rt is featured "auto_run" when cfg sgx.
[target.'cfg(sgx)'.dependencies]
async-rt = { path = "../async-rt" }
sgx_types = { path = "../incubator-teaclave-sgx-sdk/sgx_types" }
sgx_tstd = { path = "../incubator-teaclave-sgx-sdk/sgx_tstd", features = ["backtrace"] }
sgx_trts = { path = "../incubator-teaclave-sgx-sdk/sgx_trts" }
untrusted_allocator = { path = "../untrusted_allocator" }

[dev-dependencies]
ctor = "0.1"
lazy_static = "1.4"
rand = "0.8.3"