[package]
name = "async-rt"
version = "0.1.0"
authors = ["Tate, Hongliang Tian <tate.thl@antfin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
auto_run = []

[dependencies]
bit-vec = { version = "0.6", default-features = false  }
flume = { version = "0.9.0", default-features = false  }
futures = { version = "0.3", default-features = false, features = ["alloc"]  }
lazy_static = "1.4"
spin = "0.7"

[dev-dependencies]
log = { version = "0.4", default-features= false }
ctor = "0.1"