[package]
name = "sgx-untrusted-alloc"
version = "0.1.0"
edition = "2018"

[dependencies]
buddy_system_allocator = { git = "https://github.com/rcore-os/buddy_system_allocator.git" }
sgx_types = { path = "../third_parties/incubator-teaclave-sgx-sdk/sgx_types" }
sgx_tstd = { path = "../third_parties/incubator-teaclave-sgx-sdk/sgx_tstd", features = ["backtrace"] }
sgx_trts = { path = "../third_parties/incubator-teaclave-sgx-sdk/sgx_trts" }
