[package]
name = "untrusted_allocator"
version = "0.1.0"
edition = "2018"

[features]
default = [ ]

[dependencies]
buddy_system_allocator = { git = "https://github.com/rcore-os/buddy_system_allocator.git" }
sgx_types = { path = "../incubator-teaclave-sgx-sdk/sgx_types" }
sgx_tstd = { path = "../incubator-teaclave-sgx-sdk/sgx_tstd", features = ["backtrace"] }
sgx_trts = { path = "../incubator-teaclave-sgx-sdk/sgx_trts" }
