[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
edition = "2018"

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
async-rt = { path = "../../../../async-rt", default-features = false, features = ["sgx", "auto_run"] }
async-socket = { path = "../../../../async-socket", default-features = false, features = ["sgx"] }
io-uring-callback = { path = "../../../../io-uring-callback", default-features = false, features = ["sgx"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { path = "../../../../third_parties/incubator-teaclave-sgx-sdk/sgx_types" }
sgx_tstd = { path = "../../../../third_parties/incubator-teaclave-sgx-sdk/sgx_tstd", features = ["backtrace", "thread"] }
sgx_trts = { path = "../../../../third_parties/incubator-teaclave-sgx-sdk/sgx_trts" }

[workspace]